# stratos-research

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
stratos_research/: data_engine.py  portfolio_config.py  pybroker_engine.py
tests/: README.md  test_portfolio_config.py  test_pybroker_rebalance_engine.py  test_sqlite_data_engine.py
