[tool.poetry]
package-mode = false

[project]
name = "stratos-research"
version = "0.1.0"
description = ""
authors = [
    {name = "Joao Ramos",email = "joao.ramos@itv.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]


[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
